scrollbar size fixed

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     list-style: none;
 }
 html::-webkit-scrollbar{
-    width: 5rem;
+    width: .8rem;
 }
 html::-webkit-scrollbar-track{
     background: transparent;
@@ -90,7 +90,7 @@ body{
     font-size: 1.2rem;
     font-weight: 100;
 }
-.C-title .btn{
+.btn{
     margin-top: 2rem;
     background-color: #D3AD7F;
     color: #000;
@@ -99,7 +99,7 @@ body{
     cursor: pointer;
     transition: 0.3s;
 }
-.C-title .btn:hover{
+.btn:hover{
     background-color: #13131a;
     color: #fff;
 }
